--- a/src/main/resources/com/uniquindio/subastasUQ/pujas.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/pujas.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="AnchorPrincipal" prefHeight="588.0" prefWidth="908.0" stylesheets="@../../../Decoration/pujas.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.PujasController">
+<AnchorPane fx:id="AnchorPrincipal" prefHeight="588.0" prefWidth="908.0" stylesheets="@../../../Decoration/pujas.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.PujasController">
    <children>
       <AnchorPane fx:id="AnchorProductos" layoutX="14.0" layoutY="58.0" prefHeight="217.0" prefWidth="702.0" stylesheets="@../../../Decoration/pujas.css">
          <children>
@@ -31,12 +31,12 @@
               <columns>
                 <TableColumn fx:id="columnNumeralPuja" prefWidth="23.0" text="#" />
                 <TableColumn fx:id="nombre" prefWidth="60.0" text="Nombre" />
-                  <TableColumn fx:id="columnTipoProductoPuja" prefWidth="93.0" text="T.Producto" />
-                  <TableColumn fx:id="columnDescripcionPuja" prefWidth="139.0" text="Descripción" />
+                  <TableColumn fx:id="columnNombreComprador" prefWidth="93.0" text="Comprador" />
+                  <TableColumn fx:id="columnNombreProducto" prefWidth="139.0" text="Producto" />
                   <TableColumn fx:id="columnNombreAnuncinatePuja" prefWidth="85.0" text="N. Anunciante" />
                   <TableColumn fx:id="columnFechaInicioPuja" prefWidth="88.0" text="F.inicio" />
                   <TableColumn fx:id="columnFechaFInalPuja" prefWidth="73.0" text="F.Final" />
-                  <TableColumn fx:id="columValorProductoPuja" prefWidth="134.0" text="V.Producto" />
+                  <TableColumn fx:id="columValorProductoPuja" prefWidth="134.0" text="Puja Realizada" />
               </columns>
             </TableView>
          </children>
