--- a/src/main/resources/com/uniquindio/subastasUQ/RegistroUsuario.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/RegistroUsuario.fxml
@@ -2,9 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -14,52 +13,43 @@
    <children>
       <BorderPane layoutX="2.0" layoutY="-1.0" prefHeight="468.0" prefWidth="655.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <right>
-            <AnchorPane prefHeight="468.0" prefWidth="361.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="498.0" prefWidth="657.0" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="txtNombre" layoutX="62.0" layoutY="68.0" promptText="Nombre" style="-fx-background-color: transparent; -fx-border-color: #bff5c3; -fx-border-width: 0px 0px 2px 0px;" />
-                  <Hyperlink fx:id="TengoCuenta" layoutX="80.0" layoutY="414.0" onAction="#YatienesCuentaAction" prefHeight="23.0" prefWidth="158.0" text="¿Ya tienes una cuenta?" textFill="#343934" />
-                  <Button fx:id="btnRegistrarse" layoutX="193.0" layoutY="378.0" mnemonicParsing="false" onAction="#RegistrarAction" style="-fx-background-color: #bff5c3;" text="Registrarse" textFill="#272c27" />
+                  <TextField fx:id="txtNombre" layoutX="147.0" layoutY="68.0" style="-fx-background-color: transparent; -fx-border-color: #000000; -fx-border-width: 0px 0px 2px 0px;" />
+                  <Hyperlink fx:id="TengoCuenta" layoutX="154.0" layoutY="427.0" onAction="#YatienesCuentaAction" prefHeight="23.0" prefWidth="158.0" text="¿Ya tienes una cuenta?" textFill="#343934" />
+                  <Button fx:id="btnRegistrarse" layoutX="568.0" layoutY="425.0" mnemonicParsing="false" onAction="#RegistrarAction" style="-fx-background-color: #bff5c3;" text="Registrarse" textFill="#272c27" />
                   <Text layoutX="80.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registro" textAlignment="JUSTIFY" wrappingWidth="133.13671875">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Text>
-                  <TextField fx:id="txtTelefono" layoutX="62.0" layoutY="104.0" promptText="Telefono" style="-fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: #bff5c3;" />
-                  <TextField fx:id="txtDireccion" layoutX="62.0" layoutY="179.0" promptText="Dirección" style="-fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: #bff5c3;" />
-                  <TextField fx:id="txtCedula" layoutX="62.0" layoutY="139.0" promptText="Cedula o nit" style="-fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: #bff5c3;" />
-                  <Text fill="#5a6668" layoutX="62.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Información personal">
+                  <TextField fx:id="txtTelefono" layoutX="147.0" layoutY="112.0" style="-fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: #000000;" />
+                  <TextField fx:id="txtDireccion" layoutX="139.0" layoutY="221.0" style="-fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: #000000;" />
+                  <TextField fx:id="txtCedula" layoutX="147.0" layoutY="166.0" style="-fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: #000000;" />
+                  <Text fill="#5a6668" layoutX="48.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Información personal">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Text>
-                  <TextField fx:id="txtEmail" layoutX="62.0" layoutY="249.0" promptText="E-mail" style="-fx-background-color: transparent; -fx-border-color: #bff5c3; -fx-border-width: 0px 0px 2px 0px;" />
-                  <Text fill="#577575" layoutX="62.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Información de usuario">
+                  <TextField fx:id="txtEmail" layoutX="136.0" layoutY="295.0" style="-fx-background-color: transparent; -fx-border-color: #000000; -fx-border-width: 0px 0px 2px 0px;" />
+                  <Text fill="#577575" layoutX="105.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Información de usuario">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Text>
-                  <Button fx:id="NUevo" layoutX="80.0" layoutY="378.0" mnemonicParsing="false" onAction="#NUevoAction" style="-fx-background-color: #bff5c3;" text="Nuevo" />
-                  <TextField fx:id="txtContrasena" layoutX="62.0" layoutY="288.0" promptText="Contraseña" style="-fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: #bff5c3;" />
-                  <TextField fx:id="txtConfirmarContrasena" layoutX="62.0" layoutY="334.0" promptText="ConfirmarContraseña" style="-fx-background-color: transparent; -fx-border-color: #bff5c3; -fx-border-width: 0px 0px 2px 0px;" />
+                  <Button fx:id="NUevo" layoutX="493.0" layoutY="426.0" mnemonicParsing="false" onAction="#NUevoAction" style="-fx-background-color: #bff5c3;" text="Nuevo" />
+                  <TextField fx:id="txtContrasena" layoutX="136.0" layoutY="340.0" style="-fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: #000000;" />
+                  <TextField fx:id="txtConfirmarContrasena" layoutX="158.0" layoutY="384.0" promptText="ConfirmarContraseña" style="-fx-background-color: transparent; -fx-border-color: #000000; -fx-border-width: 0px 0px 2px 0px;" />
+                  <Label layoutX="38.0" layoutY="73.0" text="Nombre completo" />
+                  <Label layoutX="38.0" layoutY="117.0" text="Telefono" />
+                  <Label layoutX="38.0" layoutY="171.0" text="Cedula o Nit" />
+                  <Label layoutX="48.0" layoutY="226.0" text="Label" />
+                  <Label layoutX="24.0" layoutY="300.0" text="Email" />
+                  <Label layoutX="25.0" layoutY="353.0" text="Contraseña" />
+                  <Label layoutX="14.0" layoutY="389.0" text="Confirmación contraseña" />
                </children>
             </AnchorPane>
          </right>
-         <center>
-            <AnchorPane prefHeight="468.0" prefWidth="294.0" style="-fx-background-color: #bff5c3;" BorderPane.alignment="CENTER">
-               <children>
-                  <Text fill="#1b1919" layoutX="51.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subastas Uniquindío">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Text>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="64.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../java/com/uniquindio/subastasUQ/image/descarga.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
-         </center>
       </BorderPane>
 
    </children>
