--- a/src/main/resources/com/uniquindio/subastasUQ/productosAdquiridos.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/productosAdquiridos.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,17 +9,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="565.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="565.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uniquindio.subastasUQ.controller.view.controllerProductosAdquiridos">
    <children>
       <HBox layoutX="28.0" layoutY="93.0" prefHeight="452.0" prefWidth="611.0" style="-fx-border-color: BLACK;">
          <children>
-            <TableView prefHeight="450.0" prefWidth="617.0">
+            <TableView fx:id="tableProductosAdquiridos" prefHeight="450.0" prefWidth="617.0">
               <columns>
-                <TableColumn prefWidth="90.0" text="foto" />
-                <TableColumn prefWidth="172.0" text="Nombre producto" />
-                  <TableColumn prefWidth="172.0" text="Tipo producto" />
-                  <TableColumn prefWidth="172.0" text="Fecha adquirio" />
+                <TableColumn fx:id="columnFOto" prefWidth="90.0" text="foto" />
+                <TableColumn fx:id="columnProducto" prefWidth="172.0" text="Nombre producto" />
+                  <TableColumn fx:id="columnTipoProducto" prefWidth="172.0" text="Tipo producto" />
+                  <TableColumn fx:id="columnFechaAdquiridoi" prefWidth="172.0" text="Fecha adquirio" />
               </columns>
             </TableView>
          </children>
@@ -35,5 +35,6 @@
             </Text>
          </children>
       </HBox>
+      <Button fx:id="btnExportar" layoutX="694.0" layoutY="500.0" mnemonicParsing="false" onAction="#ActionExportar" text="Exportar" />
    </children>
 </AnchorPane>
