--- a/src/main/resources/com/uniquindio/subastasUQ/Anunciante.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/Anunciante.fxml
@@ -20,6 +20,12 @@
                 <fx:include source="publicaciones.fxml" />
             </content>
           </Tab>
+            <Tab text="Anuncios">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <fx:include source="Anuncios.fxml" />
+              </content>
+            </Tab>
         </tabs>
       </TabPane>
    </children>
