--- a/src/main/resources/com/uniquindio/subastasUQ/Productos.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/Productos.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -27,6 +28,11 @@
       <HBox fx:id="hboxImageView" layoutX="25.0" layoutY="67.0" prefHeight="196.0" prefWidth="232.0">
          <children>
             <ImageView fx:id="ImageViewAnuncios" fitHeight="194.0" fitWidth="233.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </HBox>
+      <HBox fx:id="hboxDescripcion" layoutX="413.0" layoutY="78.0" prefHeight="178.0" prefWidth="227.0">
+         <children>
+            <TextField fx:id="txtDescripcion" prefHeight="182.0" prefWidth="225.0" />
          </children>
       </HBox>
     </children>
