--- a/src/main/resources/com/uniquindio/subastasUQ/Anuncios.fxml
+++ b/src/main/resources/com/uniquindio/subastasUQ/Anuncios.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -42,5 +43,7 @@
             <Font size="50.0" />
          </font>
       </Text>
+      <Button fx:id="btnExportar" layoutX="740.0" layoutY="486.0" mnemonicParsing="false" onAction="#exportarAction" text="Exportar" />
+      <Button fx:id="btnEliminar" layoutX="634.0" layoutY="486.0" mnemonicParsing="false" onAction="#eliminarAction" text="Eliminar" />
    </children>
 </AnchorPane>
